--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -305,12 +305,20 @@
 
     <style name="style_company_info">
         <item name="android:layout_width">120dp</item>
+        <item name="android:singleLine">true</item>
         <item name="android:layout_height">wrap_content</item>
-
-        <item name="android:layout_marginLeft">15dp</item>
-        <item name="android:layout_centerInParent">true</item>
+        <item name="android:layout_centerVertical">true</item>
         <item name="android:textSize">@dimen/text_size_14</item>
         <item name="android:padding">15dp</item>
+    </style>
+
+    <style name="style_company_info_two">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:textSize">@dimen/text_size_14</item>
+        <item name="android:padding">10dp</item>
     </style>
 
 
