--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -43,6 +43,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@+id/old_pwd"
+                    android:maxLength="16"
                     android:hint="@string/hint_old_pwd"
                     android:singleLine="true" />
             </RelativeLayout>
@@ -65,6 +66,7 @@
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@+id/new_pwd"
                     android:hint="@string/hint_new_pwd"
+                    android:maxLength="16"
                     android:inputType="textPassword"
                     android:singleLine="true" />
 
@@ -88,6 +90,7 @@
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@+id/sure_pwd"
                     android:hint="@string/hint_sure_pwd"
+                    android:maxLength="16"
                     android:inputType="textPassword"
                     android:singleLine="true" />
             </RelativeLayout>
