--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -56,6 +56,7 @@
                 android:drawablePadding="@dimen/dp_5"
                 android:hint="@string/hint_phone"
                 android:inputType="phone"
+                android:maxLength="11"
                 android:padding="@dimen/dp_10"
                 android:singleLine="true"
                 android:textColorHint="@color/gray_hint"
@@ -97,6 +98,8 @@
                 android:background="@null"
                 android:drawablePadding="@dimen/dp_5"
                 android:hint="@string/hint_code"
+                android:inputType="number"
+                android:maxLength="10"
                 android:padding="@dimen/dp_10"
                 android:singleLine="true"
                 android:textColorHint="@color/gray_hint"
@@ -146,6 +149,7 @@
                 android:drawablePadding="@dimen/dp_5"
                 android:hint="@string/hint_pwd"
                 android:inputType="textPassword"
+                android:maxLength="16"
                 android:padding="@dimen/dp_10"
                 android:singleLine="true"
                 android:textColorHint="@color/gray_hint"
@@ -185,6 +189,7 @@
                 android:drawablePadding="@dimen/dp_5"
                 android:hint="@string/hint_sure_pwd"
                 android:inputType="textPassword"
+                android:maxLength="16"
                 android:padding="@dimen/dp_10"
                 android:singleLine="true"
                 android:textColorHint="@color/gray_hint"
