--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -29,6 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/dp_10"
+            android:maxLength="30"
             android:layout_toRightOf="@+id/tv_email"
             android:hint="@string/hint_email"
             android:singleLine="true" />
@@ -41,6 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_150"
         android:layout_marginTop="@dimen/dp_30"
+        android:maxLength="140"
         android:background="@drawable/edit_bg"
         android:hint="@string/hint_feedback" />
 
