--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,6 +51,8 @@
                 android:drawablePadding="@dimen/dp_5"
                 android:hint="@string/hint_username"
                 android:padding="@dimen/dp_10"
+                android:inputType="phone"
+                android:maxLength="11"
                 android:singleLine="true"
                 android:textColorHint="@color/gray_hint"
                 android:textCursorDrawable="@drawable/color_cursor"
@@ -92,6 +94,7 @@
                 android:layout_weight="1"
                 android:background="@null"
                 android:drawablePadding="@dimen/dp_5"
+                android:maxLength="16"
                 android:hint="@string/hint_pwd"
                 android:inputType="textPassword"
                 android:padding="@dimen/dp_10"
@@ -126,7 +129,7 @@
                 android:background="@null"
                 android:drawablePadding="@dimen/dp_5"
                 android:hint="@string/hint_code"
-                android:inputType="textPassword"
+                android:inputType="number"
                 android:padding="@dimen/dp_10"
                 android:singleLine="true"
                 android:textColorHint="@color/gray"
