--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -14,8 +14,7 @@
         layout="@layout/layout_auto_load_listview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/header"
-        android:layout_marginTop="@dimen/dp_15" />
+        android:layout_below="@+id/header" />
 
     <LinearLayout
         android:id="@+id/ll_go_login"
