--- a/app/src/main/res/drawable/shape_login_action.xml
+++ b/app/src/main/res/drawable/shape_login_action.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/btn_white" />
+    <solid android:color="@color/transparent" />
 
     <stroke
         android:width="1dp"
