--- a/app/src/main/res/layout/activity_business_introduction.xml
+++ b/app/src/main/res/layout/activity_business_introduction.xml
@@ -28,10 +28,13 @@
                 android:textSize="@dimen/text_size_20"
                 android:textStyle="bold" />
 
-            <View style="@style/line" />
+            <View style="@style/line"
+                android:layout_marginLeft="@dimen/dp_15"
+                android:layout_marginRight="@dimen/dp_15"/>
 
             <TextView
                 android:id="@+id/tv_content"
+                android:lineSpacingExtra="@dimen/dp_10"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/dp_15"
