--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -12,9 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_30"
-        android:background="@color/white"
+        android:background="@drawable/edit_bg"
         android:gravity="center_vertical"
-
         android:orientation="horizontal">
 
         <TextView
