--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,57 +9,58 @@
     <com.bigkoo.convenientbanner.ConvenientBanner xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/convenientBanner"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="160dp"
         app:canLoop="true" />
 
-    <ImageView
+    <com.toin.glp.widget.SelectableRoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/img_home1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/dp_15"
-        android:layout_marginRight="@dimen/dp_15"
-        android:layout_marginTop="@dimen/dp_15"
+        android:layout_marginLeft="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_10"
+        android:layout_marginTop="@dimen/dp_10"
         android:scaleType="centerCrop"
-        android:src="@mipmap/home_1" />
+        android:src="@mipmap/home1"
+        app:sriv_left_bottom_corner_radius="@dimen/dp_10"
+        app:sriv_left_top_corner_radius="@dimen/dp_10"
+        app:sriv_right_bottom_corner_radius="@dimen/dp_10"
+        app:sriv_right_top_corner_radius="@dimen/dp_10" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dp_15"
-        android:layout_marginLeft="@dimen/dp_15"
-        android:layout_marginRight="@dimen/dp_15"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="@dimen/dp_10"
+        android:layout_marginLeft="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_10"
         android:orientation="horizontal">
 
-        <ImageView
+        <com.toin.glp.widget.SelectableRoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/img_home3"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_10"
+            android:layout_weight="1"
             android:scaleType="centerCrop"
-            android:src="@mipmap/home_3" />
+            android:src="@mipmap/home2"
+            app:sriv_left_bottom_corner_radius="@dimen/dp_10"
+            app:sriv_left_top_corner_radius="@dimen/dp_10"
+            app:sriv_right_bottom_corner_radius="@dimen/dp_10"
+            app:sriv_right_top_corner_radius="@dimen/dp_10" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <com.toin.glp.widget.SelectableRoundedImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/img_home2"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_10"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/img_home2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_10"
-                android:scaleType="centerCrop"
-                android:src="@mipmap/home_2" />
-
-            <ImageView
-                android:id="@+id/img_home4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_10"
-                android:scaleType="centerCrop"
-                android:src="@mipmap/home_4" />
-        </LinearLayout>
+            android:layout_marginTop="@dimen/dp_10"
+            android:layout_weight="1"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/home3"
+            app:sriv_left_bottom_corner_radius="@dimen/dp_10"
+            app:sriv_left_top_corner_radius="@dimen/dp_10"
+            app:sriv_right_bottom_corner_radius="@dimen/dp_10"
+            app:sriv_right_top_corner_radius="@dimen/dp_10" />
     </LinearLayout>
 
 </LinearLayout>
