--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -256,5 +256,7 @@
     <color name="white_60_alpha">#99ffffff</color>
     <color name="white_80_alpha">#bbffffff</color>
     <color name="red_benqi">#FB4A65</color>
+    <color name="account_green">#4BD663</color>
+    <color name="account_red">#FB4A65</color>
 
 </resources>
