--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -63,13 +63,16 @@
                                 android:background="@drawable/shape_mine_right" />
                         </LinearLayout>
 
-                        <com.toin.glp.widget.circleImageView.CircleImageView
+                        <com.toin.glp.widget.SelectableRoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                             android:id="@+id/img_header"
                             android:layout_width="@dimen/header_img"
                             android:layout_height="@dimen/header_img"
                             android:layout_centerHorizontal="true"
                             android:scaleType="centerCrop"
-                            android:src="@mipmap/mine_header" />
+                            android:src="@mipmap/mine_header"
+                            app:sriv_border_color="@color/white"
+                            app:sriv_border_width="@dimen/dp_5"
+                            app:sriv_oval="true" />
 
                         <TextView
                             android:id="@+id/tv_name"
@@ -83,6 +86,8 @@
                             android:textSize="@dimen/comment_textSize" />
 
                     </RelativeLayout>
+
+                    <View style="@style/line" />
 
 
                     <RelativeLayout
@@ -190,8 +195,8 @@
     <LinearLayout
         android:id="@+id/ll_go_login"
         android:layout_width="match_parent"
-        android:layout_below="@+id/header"
         android:layout_height="match_parent"
+        android:layout_below="@+id/header"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingBottom="@dimen/dp_50"
