--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -159,7 +159,7 @@
 
     <TextView
         android:id="@+id/tv_login"
-        style="@style/common_button_two"
+        style="@style/common_button"
         android:layout_below="@+id/tv_code"
         android:layout_marginLeft="@dimen/dp_20"
         android:layout_marginRight="@dimen/dp_20"
