--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -146,7 +146,7 @@
         <item name="android:paddingTop">10dp</item>
         <item name="android:background">@drawable/btn_selector_blue</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
     <!-- 按钮2 -->
@@ -366,6 +366,7 @@
 
     <style name="style_company_info_two">
         <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_marginLeft">@dimen/dp_10</item>
         <item name="android:singleLine">true</item>
         <item name="android:gravity">right</item>
         <item name="android:layout_height">wrap_content</item>
